syntax = "proto2";

package api;

service HeathService {
  rpc Check(HeathRequest) returns (HeathResponse);
}

message HeathRequest {}

message HeathResponse {
  required string status = 1;
  required string service = 2;
}
